--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,25 +1,11 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+a {
+  text-decoration:  none;
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
+a:active {
+  text-decoration:  none;
+  color: white;
 }
 
 @keyframes App-logo-spin {
